--- a/activityResultApi/src/main/res/layout/activity_main.xml
+++ b/activityResultApi/src/main/res/layout/activity_main.xml
@@ -19,4 +19,14 @@
         android:gravity="center"/>
 
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="20dp"
+        android:id="@+id/requestPermission"
+        android:text="RequestPermission"
+        android:onClick="requestPermission"
+        android:gravity="center"/>
+
+
 </LinearLayout>
