--- a/activityResultApi/src/main/res/xml/file_paths.xml
+++ b/activityResultApi/src/main/res/xml/file_paths.xml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <paths>
     <external-path
-        name="files_cache"
-        path="Android/data/com.kunfei.bookshelf/cache" />
-<!--    <external-path-->
-<!--        name="external_storage_root"-->
-<!--        path="." />-->
+        name="external_cache"
+        path="externalfile" />
     <root-path
         name="root"
         path="" />
