--- a/activityResultApi/src/main/res/layout/activity_main.xml
+++ b/activityResultApi/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,91 +9,97 @@
     tools:context=".MainActivity">
 
 
-    <Button
-        android:id="@+id/startActity"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginVertical="20dp"
-        android:gravity="center"
-        android:onClick="startActity"
-        android:text="startActity" />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
 
-    <Button
-        android:id="@+id/requestPermission"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginVertical="20dp"
-        android:gravity="center"
-        android:onClick="requestPermission"
-        android:text="RequestPermission" />
+        <Button
+            android:id="@+id/startActity"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="20dp"
+            android:gravity="center"
+            android:onClick="startActity"
+            android:text="startActity" />
 
 
-    <Button
-        android:id="@+id/requestMultiPermission"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginVertical="20dp"
-        android:gravity="center"
-        android:onClick="requestMultiPermission"
-        android:text="requestMultiPermission" />
+        <Button
+            android:id="@+id/requestPermission"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="20dp"
+            android:gravity="center"
+            android:onClick="requestPermission"
+            android:text="RequestPermission" />
 
 
-    <Button
-        android:id="@+id/takePicture"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginVertical="20dp"
-        android:gravity="center"
-        android:onClick="takePicture"
-        android:text="takePicture" />
+        <Button
+            android:id="@+id/requestMultiPermission"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="20dp"
+            android:gravity="center"
+            android:onClick="requestMultiPermission"
+            android:text="requestMultiPermission" />
 
 
-    <Button
-        android:id="@+id/takePicturePreview"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginVertical="20dp"
-        android:gravity="center"
-        android:onClick="takePicturePreview"
-        android:text="takePicturePreview" />
-
-    <Button
-        android:id="@+id/pickContact"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginVertical="20dp"
-        android:gravity="center"
-        android:onClick="pickContact"
-        android:text="pickContact" />
-
-    <Button
-        android:id="@+id/getContent"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginVertical="20dp"
-        android:gravity="center"
-        android:onClick="getContent"
-        android:text="getContent" />
+        <Button
+            android:id="@+id/takePicture"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="20dp"
+            android:gravity="center"
+            android:onClick="takePicture"
+            android:text="takePicture" />
 
 
-    <Button
-        android:id="@+id/customActivityContract"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginVertical="20dp"
-        android:gravity="center"
-        android:onClick="customActivityContract"
-        android:text="customActivityContract" />
+        <Button
+            android:id="@+id/takePicturePreview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="20dp"
+            android:gravity="center"
+            android:onClick="takePicturePreview"
+            android:text="takePicturePreview" />
 
-    <Button
-        android:id="@+id/otherClassUse"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginVertical="20dp"
-        android:gravity="center"
-        android:onClick="otherClassUse"
-        android:text="otherClassUse" />
+        <Button
+            android:id="@+id/pickContact"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="20dp"
+            android:gravity="center"
+            android:onClick="pickContact"
+            android:text="pickContact" />
+
+        <Button
+            android:id="@+id/getContent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="20dp"
+            android:gravity="center"
+            android:onClick="getContent"
+            android:text="getContent" />
 
 
-</LinearLayout>
+        <Button
+            android:id="@+id/customActivityContract"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="20dp"
+            android:gravity="center"
+            android:onClick="customActivityContract"
+            android:text="customActivityContract" />
+
+        <Button
+            android:id="@+id/otherClassUse"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="20dp"
+            android:gravity="center"
+            android:onClick="otherClassUse"
+            android:text="otherClassUse" />
+
+    </LinearLayout>
+</androidx.core.widget.NestedScrollView>
