--- a/app/src/main/res/layout/layout_list_item.xml
+++ b/app/src/main/res/layout/layout_list_item.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/textView"
         android:textSize="23dp"
+        android:background="@drawable/ripple_test"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
