--- a/jetpack/src/main/res/layout/activity_view_model.xml
+++ b/jetpack/src/main/res/layout/activity_view_model.xml
@@ -104,4 +104,17 @@
         app:layout_constraintStart_toEndOf="@id/btn5"
         app:layout_constraintTop_toBottomOf="@id/btn4" />
 
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:textColor="@color/black"
+        android:textSize="24dp"
+        tools:text="this isi "
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="30dp"
+        android:id="@+id/text"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
